geralistas/y.output
Grammar

    0 $accept: S $end

    1 S: L

    2 L: A ',' L
    3  | A

    4 A: TK_ID
    5  | TK_CINT
    6  | TK_CDOUBLE
    7  | '(' L ')'
    8  | '(' ')'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 7 8
')' (41) 7 8
',' (44) 2
error (256)
TK_CINT (258) 5
TK_CDOUBLE (259) 6
TK_ID (260) 4


Nonterminals, with rules where they appear

$accept (9)
    on left: 0
S (10)
    on left: 1, on right: 0
L (11)
    on left: 2 3, on right: 1 2 7
A (12)
    on left: 4 5 6 7 8, on right: 2 3


State 0

    0 $accept: . S $end

    TK_CINT     shift, and go to state 1
    TK_CDOUBLE  shift, and go to state 2
    TK_ID       shift, and go to state 3
    '('         shift, and go to state 4

    S  go to state 5
    L  go to state 6
    A  go to state 7


State 1

    5 A: TK_CINT .

    $default  reduce using rule 5 (A)


State 2

    6 A: TK_CDOUBLE .

    $default  reduce using rule 6 (A)


State 3

    4 A: TK_ID .

    $default  reduce using rule 4 (A)


State 4

    7 A: '(' . L ')'
    8  | '(' . ')'

    TK_CINT     shift, and go to state 1
    TK_CDOUBLE  shift, and go to state 2
    TK_ID       shift, and go to state 3
    '('         shift, and go to state 4
    ')'         shift, and go to state 8

    L  go to state 9
    A  go to state 7


State 5

    0 $accept: S . $end

    $end  shift, and go to state 10


State 6

    1 S: L .

    $default  reduce using rule 1 (S)


State 7

    2 L: A . ',' L
    3  | A .

    ','  shift, and go to state 11

    $default  reduce using rule 3 (L)


State 8

    8 A: '(' ')' .

    $default  reduce using rule 8 (A)


State 9

    7 A: '(' L . ')'

    ')'  shift, and go to state 12


State 10

    0 $accept: S $end .

    $default  accept


State 11

    2 L: A ',' . L

    TK_CINT     shift, and go to state 1
    TK_CDOUBLE  shift, and go to state 2
    TK_ID       shift, and go to state 3
    '('         shift, and go to state 4

    L  go to state 13
    A  go to state 7


State 12

    7 A: '(' L ')' .

    $default  reduce using rule 7 (A)


State 13

    2 L: A ',' L .

    $default  reduce using rule 2 (L)
